--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,23 @@ img {
   justify-self: flex-end;
 }
 
+.showcase-form .form-control {
+  margin: 30px;
+}
+
+.showcase-form input[type='text'],
+.showcase-form input[type='email'] {
+  border: 0;
+  border-bottom: 1px solid #b4becb;
+  width: 100%;
+  padding: 3px;
+  font-size: 16px;
+}
+
+.showcase-form input:focus {
+  outline: none;
+}
+
 /* Utilities */
 .container {
   max-width: 1100px;
