--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,24 @@ img {
   color: #333;
 }
 
+.btn {
+  display: inline-block;
+  padding: 10px 30px;
+  cursor: pointer;
+  background-color: var(--primary-color);
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+}
+
+.btn-outline {
+  background-color: transparent;
+  border: 1px #fff solid;
+}
+
+.btn:hover {
+  transform: scale(.98);
+}
 
 .flex {
   display: flex;
