Add stats section

--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,27 @@ img {
   outline: none;
 }
 
+.showcase::before,
+.showcase::after {
+  content: '';
+  position: absolute;
+  height: 100px;
+  bottom: -70px;
+  background-color: #fff;
+  right: 0;
+  left: 0;
+  transform: skewY(-3deg);
+  -webkit-transform: skewY(-3deg);
+  -moz-transform: skewY(-3deg);
+  -ms-transform: skewY(-3deg);
+}
+
+/* Stats */
+.stats {
+  padding-top: 100px;
+
+}
+
 /* Utilities */
 .container {
   max-width: 1100px;
