--- a/css/style.css
+++ b/css/style.css
@@ -138,3 +138,16 @@ img {
 
 }
 
+.stats-heading {
+  max-width: 500px;
+  margin: auto;
+}
+
+.stats .grid h3 {
+  font-size: 35px;
+}
+
+.stats .grid p {
+  font-size: 20px;
+  font-weight: bold;
+}
