--- a/css/style.css
+++ b/css/style.css
@@ -151,3 +151,20 @@ img {
   font-size: 20px;
   font-weight: bold;
 }
+
+/* CLI */
+.cli .grid {
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+}
+
+.cli .grid > *:first-child {
+  grid-column: 1 / span 2;
+  grid-row: 1 / span 2;
+}
+
+/* Cloud */
+.cloud .grid {
+  grid-template-columns: 4fr 3fr;
+  color: ;
+}
