--- a/css/style.css
+++ b/css/style.css
@@ -166,5 +166,24 @@ img {
 /* Cloud */
 .cloud .grid {
   grid-template-columns: 4fr 3fr;
-  color: ;
+}
+
+/* Languages */
+.languages .flex {
+  flex-wrap: wrap;
+}
+
+.languages .card {
+  text-align: center;
+  margin: 18px 10px 40px;
+  transition: transform 120ms ease-in;
+}
+
+.languages .card h4 {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.languages .card:hover {
+  transform: translateY(-15px);
 }
