Change mobile nive bar for rancy buttons

--- a/css/style.css
+++ b/css/style.css
@@ -228,33 +228,43 @@ img {
 
 
 /* Mobile */
-@media(max-width:500px) {
-  .navbar {
-    position: top;
+@media (max-width: 500px) {
+  .navbar .container {
+    overflow: visible;
+    position: relative;
+    z-index: 100;
   }
-
   .navbar {
     height: 110px;
   }
+
   .navbar .flex {
     flex-direction: column;
   }
-  
+
   .navbar li {
     padding: 10px;
     background-color: rgba(0, 0, 0, 0.1);
     border-radius: 7px;
     margin: 0 7px;
     border: 1px solid rgba(0, 34, 64, 0.1);
-    transition: transform 150ms ease;
-    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+    transition: transform 60ms  linear;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
     font-weight: 900;
   }
+
+    
   .navbar a:hover {
     border-bottom: none;
   }
 
   .navbar li:active {
     transform: scale(.8);
+    background-color: rgba(0, 0, 0, 0.25);
+  }
+  
+  .showcase-form {
+    width: 300px;
   }
 }
+
