--- a/css/style.css
+++ b/css/style.css
@@ -149,13 +149,8 @@ img {
 }
 
 .stats .grid p {
-  font-size: 20px;
-  font-weight: bold;
-}
+  font-size: 20px;IE
 
-/* CLI */
-.cli .grid {
-  grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 1fr);
 }
 
@@ -189,10 +184,30 @@ img {
   transform: translateY(-15px);
 }
 
+/* Features */
+.features-head img {
+  width: 200px; 
+  justify-self: flex-end;
+}
+
+.features-sub-head img {
+  width: 300px;
+  justify-self: flex-end;
+}
+
+.features-main .card > i {
+  margin-right: 20px;
+}
+
+.features-main 
+
 /* Footer */
 .footer .social a {
   margin: 0 10px;
 }
+
+
+
 
 /* Tablets and under */
 @media(max-width: 768px) {
@@ -222,8 +237,6 @@ img {
     grid-column: 1;
     grid-row: 1;
   }
-  
-
 }
 
 
@@ -234,6 +247,7 @@ img {
     position: relative;
     z-index: 100;
   }
+
   .navbar {
     height: 110px;
   }
@@ -253,7 +267,6 @@ img {
     font-weight: 900;
   }
 
-    
   .navbar a:hover {
     border-bottom: none;
   }
