--- a/css/style.css
+++ b/css/style.css
@@ -185,7 +185,8 @@ img {
 }
 
 /* Features */
-.features-head img {
+.features-head img,
+.docs-head img {
   width: 200px; 
   justify-self: flex-end;
 }
@@ -199,7 +200,17 @@ img {
   margin-right: 20px;
 }
 
-.features-main 
+.features-main .grid {
+  padding: 30px;
+}
+
+.features-main .grid >*:first-child {
+  grid-column: 1 / span 3;
+}
+
+.features-main .grid >*:nth-child(2) {
+  grid-column: 1 / span 2;
+}
 
 /* Footer */
 .footer .social a {
