Add alert code block, text color styles

--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,12 @@ p {
 img {
   width: 100%;
 }
+code, pre {
+  background: #333;
+  color: #fff;
+  padding: 10px;
+  border-radius: 2px;
+}
 
 /* Navbar */
 .navbar {
@@ -247,7 +253,9 @@ img {
   .showcase .grid,
   .stats.grid,
   .cli .grid,
-  .cloud .grid {
+  .features-main .grid,
+  .docs-main .grid,
+  .cloud .grid, {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
   }
