--- a/css/utilities.css
+++ b/css/utilities.css
@@ -130,7 +130,28 @@
 .grid-3 {
     grid-template-columns: repeat(3, 1fr);
 }
-
+/* Alert */
+.alert {
+    background-color: var(--light-color);
+    padding: 10px 20px;
+    font-weight: bold;
+    margin: 15px 0;
+  }
+  
+  .alert i {
+    margin-right: 10px;
+  }
+  
+  .alert-success {
+    background-color: var(--success-color);
+    color: #fff;
+  }
+  
+  .alert-error {
+    background-color: var(--error-color);
+    color: #fff;
+  }
+  
 /* Margin */
 .my-1 {
     margin: 1rem 0;
