--- a/css/style.css
+++ b/css/style.css
@@ -255,7 +255,7 @@ code, pre {
   .cli .grid,
   .features-main .grid,
   .docs-main .grid,
-  .cloud .grid, {
+  .cloud .grid {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
   }
@@ -277,6 +277,24 @@ code, pre {
     grid-column: 1;
     grid-row: 1;
   }
+
+  .features-head,
+  .features-sub-head,
+  .docs-head {
+    text-align: center;
+  }
+
+  .features-head img,
+  .features-sub-head img,
+  .docs-head img {
+    justify-self: center;
+  }
+  
+  .features-main .grid >*:first-child,
+  .features-main .grid >*:nth-child(2) {
+    grid-column: 1;
+  }
+  
 }
 
 
