--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,10 @@ code, pre {
   overflow: visible;
 }
 
+.showcase-text {
+  animation: slideInFromLeft 1s ease-in;
+}
+
 .showcase-form {
   position: relative;
   top: 60px;
@@ -105,6 +109,8 @@ code, pre {
   padding: 40px;
   z-index: 100;
   justify-self: flex-end;
+  animation: slideInFromRight 1s ease-in;
+
 }
 
 .showcase-form .form-control {
@@ -142,6 +148,8 @@ code, pre {
 /* Stats */
 .stats {
   padding-top: 100px;
+  animation: slideInFromBottom 1s ease-in;
+
 
 }
 
@@ -244,6 +252,43 @@ code, pre {
   margin: 0 10px;
 }
 
+/* Animations */
+@keyframes slideInFromLeft {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideInFromRight {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideInFromTop {
+  0% {
+    transform: translateY(-100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideInFromBottom {
+  0% {
+    transform: translateY(100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
 
 
 
@@ -266,11 +311,15 @@ code, pre {
   .showcase-text{
     text-align: center;
     margin-top: 40px;
+    animation: slideInFromTop 1s ease-in;
+
   }
 
   .showcase-form {
     justify-self: center;
     margin: auto;
+    animation: slideInFromBottom 1s ease-in;
+
   }
 
   .cli .grid > *:first-child {
